--- a/example.html
+++ b/example.html
@@ -48,7 +48,7 @@ red
     var allCSSRules = ss.getAllRules();
     // get its rules
     // don't touch boobs if you don't know how
-    console.log(allCSSRules[index]);
+    console.log(allCSSRules[index]); // {sel: ..., css: {...} }
   </script>
 </body>
 </html>
